Integrate ssl-impl module into server